correcao form, add seletor, correcao navbar link login quem-somos

--- a/contato.html
+++ b/contato.html
@@ -61,12 +61,12 @@
             </div>
           </div>
           <div>
-            <selector>
-              <option value="">Sugestões</option>
-              <option value="">Reclamações</option>
-              <option value="">Dúvidas</option>
-              <option value="">Elogios</option>
-            </selector>
+            <select id="seletorContato">
+              <option value="sugestao">Sugestões</option>
+              <option value="reclamacao">Reclamações</option>
+              <option value="duvida">Dúvidas</option>
+              <option value="elogio">Elogios</option>
+            </select>
           </div>
 
           <div>
