--- a/planos-spacetrip.html
+++ b/planos-spacetrip.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
   <link rel="stylesheet" href="stylespacetrip.css">
   <title>Turismo Espacial</title>
 </head>
@@ -13,7 +15,8 @@
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="./index.html">SpaceTrip</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
@@ -27,67 +30,76 @@
     </nav>
   </header>
 
-  <main>
-    <div class="container">
-        <div class="row" style="padding:50px;">
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card card-voyager">
-                    <img src="img/" class="card-img-top">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title text-white">PLANO VOYAGER</h5>
-                        <div class="voyager-description" id="voyager-text">
-                          <p class="text-white font-weight-bold">
-                          O Plano Voyager oferece uma caminhada de duas horas sobre a superfície do planeta escolhido,
-                          incluindo todos os equipamentos de segurança necessários para tal atividade. <br><br>
-                          Ideal para aventureiros e curiosos de primeira viagem que ainda não tiveram nenhuma
-                          experiência fora da Terra e desejam desbravar o universo.
-                          <a class="text-reset" href="./cadastro_cep.html"><h4 class="text-warning font-weight-bold">Garanta já sua vaga!</h4></a>
-                          </p>
-                          </div>
-                    </div>
-                </div>
+  <section class="mb-5">
+    <h1 class="d-flex justify-content-center mt-5">Nossos Planos</h1>
+  </section>
+
+  <main class="d-flex h-auto">
+    <div class="container w-100">
+      <div class="d-flex w-100 justify-content-around">
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card card-voyager mb-3">
+            <img src="./img/plano1esc.jpg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h5 class="card-title text-white">PLANO VOYAGER</h5>
+              <div class="voyager-description" id="voyager-text">
+                <p class="text-white font-weight-bold">
+                  O Plano Voyager oferece uma caminhada de duas horas sobre a superfície do planeta escolhido,
+                  incluindo todos os equipamentos de segurança necessários para tal atividade. <br><br>
+                  Ideal para aventureiros e curiosos de primeira viagem que ainda não tiveram nenhuma
+                  experiência fora da Terra e desejam desbravar o universo.
+                  <a class="text-reset" href="./cadastro_cep.html">
+                    <h4 class="text-warning font-weight-bold">Garanta já sua vaga!</h4>
+                  </a>
+                </p>
+              </div>
             </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card card-galileo">
-                    <img src="./img/plano2esc.jpg" class="card-img-top">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title text-white">PLANO GALILEO</h5>
-                        <div class="galileo-description" id="galileo-text">
-                        <p class="text-white font-weight-bold">
-                          O Plano Galileo contempla o cliente com um passeio por nossos complexos espaciais
-                          no planeta de sua escolha. Você vai poder desfrutar da melhor estrutura de lazer
-                          e entretenimento enquanto observa uma vista galáctica sem igual. <br><br>
-                          É o passeio ideal para a família que deseja
-                          desfrutar de uma experiência inesquecível. <br>
-                          <a class="text-reset" href="./cadastro_cep.html"><h4 class="text-warning font-weight-bold">Clique para fazer seu cadastro!</h4></a>
-                        </p>
-                      </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 col-md-6 col-lg-4">
-                <div class="card card-webb">
-                    <img src="./img/plano3esc.jpg" class="card-img-top-1">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title text-white">PLANO WEBB</h5>
-                        <div class="webb-description" id="webb-text">
-                        <p class="text-white font-weight-bold">
-                          O Plano Webb é o que há de mais sofisticado no turismo espacial nos dias de hoje.
-                          Você ficará hospedado durante uma semana em nosso hotel cinco estrelas com vista pra Terra e usufruirá
-                          de todo o conforto das nossas Suítes Exclusivas.<br><br>
-                          Está planejando a lua de mel dos sonhos? Quer ter momentos extraordinários com as pessoas que você ama?
-                          O Plano Webb é o que você está procurando.
-                          <a class="text-reset" href="./cadastro_cep.html"><h4 class="text-warning font-weight-bold">Não perca esta chance!</h4></a>
-                        </p>
-                      </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card card-galileo mb-3">
+            <img src="./img/plano2esc.jpg" class="card-img-top">
+            <div class="card-img-overlay">
+              <h5 class="card-title text-white">PLANO GALILEO</h5>
+              <div class="galileo-description" id="galileo-text">
+                <p class="text-white font-weight-bold">
+                  O Plano Galileo contempla o cliente com um passeio por nossos complexos espaciais
+                  no planeta de sua escolha. Você vai poder desfrutar da melhor estrutura de lazer
+                  e entretenimento enquanto observa uma vista galáctica sem igual. <br><br>
+                  É o passeio ideal para a família que deseja
+                  desfrutar de uma experiência inesquecível. <br>
+                  <a class="text-reset" href="./cadastro_cep.html">
+                    <h4 class="text-warning font-weight-bold">Clique para fazer seu cadastro!</h4>
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-4">
+          <div class="card card-webb mb-3">
+            <img src="./img/plano3esc.jpg" class="card-img-top-1">
+            <div class="card-img-overlay">
+              <h5 class="card-title text-white">PLANO WEBB</h5>
+              <div class="webb-description" id="webb-text">
+                <p class="text-white font-weight-bold">
+                  O Plano Webb é o que há de mais sofisticado no turismo espacial nos dias de hoje.
+                  Você ficará hospedado durante uma semana em nosso hotel cinco estrelas com vista pra Terra e usufruirá
+                  de todo o conforto das nossas Suítes Exclusivas.<br><br>
+                  Está planejando a lua de mel dos sonhos? Quer ter momentos extraordinários com as pessoas que você
+                  ama?
+                  O Plano Webb é o que você está procurando.
+                  <a class="text-reset" href="./cadastro_cep.html">
+                    <h4 class="text-warning font-weight-bold">Não perca esta chance!</h4>
+                  </a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-</main>
-
-
+  </main>
 
 
   <footer class="bg-secondary p-3 fixed-bottom">
@@ -95,10 +107,16 @@
   </footer>
 
 
-
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+    integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+  </script>
   <script src="spacetrip.js"></script>
 </body>
+
 </html>
