alteracao frase card pedro

--- a/contato.html
+++ b/contato.html
@@ -161,7 +161,7 @@
               <div class="card-body">
                 <h3 class="card-title">Pedro Toni</h3>
                 <h6 class="card-text">Pedro Malabares</h6>
-                <p class="card-text">Malabarista, cantor, rapper, empresário, vendedor de perfume pirata e gênio dos scripts, esse sou eu.</p>
+                <p class="card-text">Desenvolvedor em formação.</p>
                 <div class="card-footer">
                   <div class="card-footer-inner">
                     <a href="https://github.com/pedrotoni"><img src="./img/github1.png"></a>
